done mobile grid

--- a/deploy/blog.html
+++ b/deploy/blog.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/b4191eaaa2.js" crossorigin="anonymous"></script>
     <title>Valut + Vine</title>
-
 </head>
 
 
@@ -117,23 +116,29 @@
 </body>
 
 <footer>
-    <section>
-        <h2>Subscribe to Our Newsletter.</h2>
-        <h3>Stay up to date on our shops, events, and sales.</h3>
-        <form>
-            <input type="text" name="email" placeholder="Email:">
-            <button>Enter</button>
-        </form>
+    <section id="newsletter">
+        <div>
+            <h2>Subscribe to Our Newsletter.</h2>
+            <h3>Stay up to date on our shops, events, and sales.</h3>
+            <form>
+                <input type="text" name="email" placeholder="Email:">
+                <button>Enter</button>
+            </form>
+        </div>
+
     </section>
 
 
     <section>
-        <ul>
+
+        <ul id="icons">
             <li><i class="fa-brands fa-instagram"></i></li>
             <li><i class="fa-brands fa-pinterest"></i></li>
             <li><i class="fa-brands fa-facebook"></i></li>
             <li><i class="fa-brands fa-yelp"></i></li>
         </ul>
+
+
 
         <p>2022 VAULT + VINE LLC., ALL RIGHTS RESERVED</p>
     </section>
